--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      matrix: # demucs (usado en ia_scorer) no soporta Python 3.13 todavía
+      matrix:
         python-version: [3.10, 3.11, 3.12]
 
     steps:
