arreglando dashboard admin

--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,5 @@
     "closing_minute": 0,
     "app_name": "QR Karaoke",
     "theme": "light",
-    "enable_notifications": false
+    "enable_notifications": true
 }
