--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.defaultInterpreterPath": ".venv/Scripts/python.exe"
+  "python.defaultInterpreterPath": ".venv/Scripts/python.exe",
+  "webhint.enable": false,
+  "html.validate.styles": false,
+  "css.validate": false
 } 
